# money-tracker

./: .gitignore  main.py  pyproject.toml
collector/: collector.py  fetch.py
plot/: plot.py
utils/: database.py
